created settings form

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <link href="./nav.css" rel="stylesheet">
     <link href="./recordingform.css" rel="stylesheet">
     <link href="./songlibrary.css" rel="stylesheet">
+    <link href="./warningform.css" rel="stylesheet">
+    <link href="./settingsform.css" rel="stylesheet">
 
 
     <div id="nav-bar">
@@ -34,6 +36,10 @@
     <script src="./index.js"></script>
     <script src="./navbar.js"></script>
     <script src="./app.js"></script>
+
+    <script src="https://kit.fontawesome.com/df997dcec0.js"></script>
+
+
 </body>
 
 </html>
