added ability to change background photos

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,14 @@
             <div id='fretboard'></div>
 
 
+
         </div>
+
 </head>
 
 <body>
+    <!-- <img src="background.jpeg" id="wall-paper"></img> -->
+
     <script src="./navbar.js"></script>
     <script src="./app.js"></script>
     <script src="https://kit.fontawesome.com/df997dcec0.js"></script>
