Add webpack to package json

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 <body>
     <!-- <img src="background.jpeg" id="wall-paper"></img> -->
 
-    <script src="./src/navbar.js"></script>
+    <script src="./navbar.js"></script>
     <script src="./app.js"></script>
     <script src="https://kit.fontawesome.com/df997dcec0.js"></script>
 </body>
